# simple-language-data-prep-tools

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  jupyter-lite.json  jupyter_lite_config.json  pyproject.toml  tox.ini
docs/: jupyter-lite.json
docs/api/contents/: all.json
docs/api/contents/simple_prep/: all.json
docs/files/: convert_transcripts.ipynb  spreadsheet_to_plaintext.ipynb  tidy_to_plaintext.ipynb
docs/files/simple_prep/: tidy_transcripts.py
notebooks/: convert_transcripts.ipynb  spreadsheet_to_plaintext.ipynb  tidy_to_plaintext.ipynb
notebooks/simple_prep/: tidy_transcripts.py
