[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-language-data-prep-tools"
description = "A collection of small tools for preparing language data for computational (text) analysis."
readme = "README.md"
requires-python = ">=3.10.0"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE.txt"]
authors = [
  {name = "Sam Hames"},
]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "python-docx",
  "openpyxl",
  # TODO - these might actually be a dev/deploy dependency, not necessarily needed for the underlying
  # data processing packages.
  "jupyter",
  "ipywidgets"
]

version="0.0.4"


[project.optional-dependencies]
dev = ["pip-tools", "nbstripout", "black"]
build_jupyterlite = ["jupyterlite-core", "jupyterlite-pyodide-kernel"]

[project.urls]
Repository = "https://github.com/AustralianTextAnalyticsPlatform/simple-language-data-prep-tools"
Homepage = "https://github.com/AustralianTextAnalyticsPlatform/simple-language-data-prep-tools"


[tool.setuptools]
package-dir = {"" = "notebooks"}
packages = ["simple_prep"]
